# fifo-example

./: .gitignore  Cargo.toml  Readme.md  purge_queues.sh  setup_localstack.sh
src/: main.rs
