[package]
name = "fifo-example"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.16"
aws-sdk-sns = "1.60.0"
aws-sdk-sqs = "1.59.0"
clap = { version = "4.5.29", features = ["derive", "env"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.13.1", features = ["v4"] }
